crates/contextdb-core/tests/fixtures/compile_fail/no_from_u64_for_row_id.stderr
error[E0277]: the trait bound `RowId: From<u64>` is not satisfied
 --> tests/fixtures/compile_fail/no_from_u64_for_row_id.rs:4:18
  |
4 |     takes_from::<contextdb_core::RowId>(42u64);
  |                  ^^^^^^^^^^^^^^^^^^^^^ the trait `From<u64>` is not implemented for `RowId`
  |
note: required by a bound in `takes_from`
 --> tests/fixtures/compile_fail/no_from_u64_for_row_id.rs:1:18
  |
1 | fn takes_from<T: From<u64>>(_: T) {}
  |                  ^^^^^^^^^ required by this bound in `takes_from`

error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/no_from_u64_for_row_id.rs:4:41
  |
4 |     takes_from::<contextdb_core::RowId>(42u64);
  |     ----------------------------------- ^^^^^ expected `RowId`, found `u64`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/fixtures/compile_fail/no_from_u64_for_row_id.rs:1:4
  |
1 | fn takes_from<T: From<u64>>(_: T) {}
  |    ^^^^^^^^^^               ----
help: try wrapping the expression in `contextdb_core::RowId`
  |
4 |     takes_from::<contextdb_core::RowId>(contextdb_core::RowId(42u64));
  |                                         ++++++++++++++++++++++     +
